build/log/idf_py_stderr_output_80039
/home/pi/httptc/main/web_server.c: In function 'temp_post':
/home/pi/httptc/main/web_server.c:95:5: error: implicit declaration of function 'ESP_LOGI'; did you mean 'ESP_OK'? [-Wimplicit-function-declaration]
   95 |     ESP_LOGI("POST", "Set target_temp=%.2f, delay=%d", target_temp, output_delay);
      |     ^~~~~~~~
      |     ESP_OK
/home/pi/httptc/main/web_server.c: In function 'start_webserver':
/home/pi/httptc/main/web_server.c:117:9: warning: missing initializer for field 'user_ctx' of 'httpd_uri_t' {aka 'struct httpd_uri'} [-Wmissing-field-initializers]
  117 |         httpd_register_uri_handler(server, &(httpd_uri_t){"/", HTTP_GET, index_get});
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /home/pi/httptc/main/web_server.h:4,
                 from /home/pi/httptc/main/web_server.c:1:
/home/pi/esp32/esp-idf/components/esp_http_server/include/esp_http_server.h:439:11: note: 'user_ctx' declared here
  439 |     void *user_ctx;
      |           ^~~~~~~~
/home/pi/httptc/main/web_server.c:118:9: warning: missing initializer for field 'user_ctx' of 'httpd_uri_t' {aka 'struct httpd_uri'} [-Wmissing-field-initializers]
  118 |         httpd_register_uri_handler(server, &(httpd_uri_t){"/set", HTTP_POST, temp_post});
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~
/home/pi/esp32/esp-idf/components/esp_http_server/include/esp_http_server.h:439:11: note: 'user_ctx' declared here
  439 |     void *user_ctx;
      |           ^~~~~~~~
/home/pi/httptc/main/web_server.c:119:9: warning: missing initializer for field 'user_ctx' of 'httpd_uri_t' {aka 'struct httpd_uri'} [-Wmissing-field-initializers]
  119 |         httpd_register_uri_handler(server, &(httpd_uri_t){"/data", HTTP_GET, data_get});
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~
/home/pi/esp32/esp-idf/components/esp_http_server/include/esp_http_server.h:439:11: note: 'user_ctx' declared here
  439 |     void *user_ctx;
      |           ^~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:134: esp-idf/main/CMakeFiles/__idf_main.dir/web_server.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:6135: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
make: *** [Makefile:149: all] Error 2
